--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <input type="password" placeholder="Enter Password" id="passwordInput" required>
             <button type="submit" class="futuristic-button">Submit</button>
         </form>
-        <a href="https://docs.google.com/spreadsheets/d/1qEYTgHSnLsknz-IE2rVRKL1aJv5WOVxftluTj6g0KWc/edit?usp=drive_link" 
+        <a href="https://docs.google.com/spreadsheets/d/1z9kOg75v3UciAKAfrdlBeOgbQyWuTfyH/edit?gid=1797101254#gid=1797101254" 
            id="hiddenLink" target="_blank">Hidden Content</a>
     </div>
     <script>
